Linux: Cannot select UI backend (Wayland/XCB)

On Linux (Fedora 26 with GNOME in particular) there is a problem with VLC that the UI is broken because of Qt bugs. This is not related to VLC though. Running VLC on XWayland instead would be a good short-time solution.

However, VLC doesn't honor the default platform backend settings of the host Qt library. The same goes for the QT_QPA_PLATFORM variable.

Making it possible to select the platform backend would be a good short-term workaround for the issues we currently experience.

I can write a short patch if this is accepted as a valid issue.