Qt: remove back-end detection kludges (fixes #18383)

This never worked properly with QPA. The process still aborted if the
requested platform was not installed. Incidentally, it also prevented
other platforms from being used at all, and overrode Qt user settings.